Improved documentation for traditional-is-not-always-simpler/README.md; thorough explanation of the build, using mermaid diagrams